Fixes for YamlLinter

--- a/Resources/Prototypes/GameRules/roundstart.yml
+++ b/Resources/Prototypes/GameRules/roundstart.yml
@@ -273,8 +273,8 @@
       #   tableId: BasicAntagEventsTable
       # - !type:NestedSelector # Frontier
       #   tableId: CargoGiftsTable # Frontier
-      - !type:NestedSelector
-        tableId: CalmPestEventsTable
+      # - !type:NestedSelector
+      #   tableId: CalmPestEventsTable
       # - !type:NestedSelector # Frontier
       #   tableId: SpicyPestEventsTable # Frontier
 
