--- a/Resources/Prototypes/Objectives/traitor.yml
+++ b/Resources/Prototypes/Objectives/traitor.yml
@@ -221,29 +221,29 @@
 
 ## qm
 
-- type: entity
-  parent: BaseTraitorStealObjective
-  id: ClipboardStealObjective
-  components:
-  - type: NotJobRequirement
-    job: Quartermaster
-  - type: StealCondition
-    stealGroup: BoxFolderQmClipboard
-    owner: job-name-qm
+#- type: entity
+#  parent: BaseTraitorStealObjective
+#  id: ClipboardStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: Quartermaster
+#  - type: StealCondition
+#    stealGroup: BoxFolderQmClipboard
+#    owner: job-name-qm
 
 ## hop
 
-- type: entity
-  parent: BaseTraitorStealObjective
-  id: CorgiMeatStealObjective
-  components:
-  - type: NotJobRequirement
-    job: HeadOfPersonnel
-  - type: ObjectiveLimit
-    limit: 3 # ian only has 2 slices, 3 obj for drama
-  - type: StealCondition
-    stealGroup: FoodMeatCorgi
-    owner: objective-condition-steal-Ian
+#- type: entity
+#  parent: BaseTraitorStealObjective
+#  id: CorgiMeatStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: HeadOfPersonnel
+#  - type: ObjectiveLimit
+#    limit: 3 # ian only has 2 slices, 3 obj for drama
+#  - type: StealCondition
+#    stealGroup: FoodMeatCorgi
+#    owner: objective-condition-steal-Ian
 
 ## cap
 
