--- a/Resources/Prototypes/_NF/Events/events.yml
+++ b/Resources/Prototypes/_NF/Events/events.yml
@@ -5,7 +5,7 @@
     - id: AnomalySpawn
     - id: BluespaceArtifact
     # - id: BluespaceLocker
-    - id: BreakerFlip
+    # - id: BreakerFlip
     # - id: BureaucraticError
     # - id: ClericalError
     - id: CockroachMigration
