--- a/Resources/Prototypes/Objectives/thief.yml
+++ b/Resources/Prototypes/Objectives/thief.yml
@@ -248,27 +248,27 @@
   - type: Objective
     difficulty: 1
 
-- type: entity                                      #Cargo subgroup
-  parent: BaseThiefStealObjective
-  id: ExpeditionsCircuitboardStealObjective
-  components:
-  - type: NotJobRequirement
-    job: SalvageSpecialist
-  - type: StealCondition
-    stealGroup: SalvageExpeditionsComputerCircuitboard
-  - type: Objective
-    difficulty: 0.7
+#- type: entity                                      #Cargo subgroup
+#  parent: BaseThiefStealObjective
+#  id: ExpeditionsCircuitboardStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: SalvageSpecialist
+#  - type: StealCondition
+#    stealGroup: SalvageExpeditionsComputerCircuitboard
+#  - type: Objective
+#    difficulty: 0.7
 
-- type: entity
-  parent: BaseThiefStealObjective
-  id: CargoShuttleCircuitboardStealObjective
-  components:
-  - type: NotJobRequirement
-    job: CargoTechnician
-  - type: StealCondition
-    stealGroup: CargoShuttleConsoleCircuitboard
-  - type: Objective
-    difficulty: 0.7
+#- type: entity
+#  parent: BaseThiefStealObjective
+#  id: CargoShuttleCircuitboardStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: CargoTechnician
+#  - type: StealCondition
+#    stealGroup: CargoShuttleConsoleCircuitboard
+#  - type: Objective
+#    difficulty: 0.7
 
 - type: entity                                      #Service subgroup
   parent: BaseThiefStealObjective
@@ -416,102 +416,102 @@
   - type: Objective
     difficulty: 0.8
 
-- type: entity
-  parent: BaseThiefStealStructureObjective
-  id: ToiletGoldenStealObjective
-  components:
-  - type: NotJobRequirement
-    job: Captain
-  - type: StealCondition
-    stealGroup: ToiletGoldenDirtyWater
-  - type: Objective
-    difficulty: 2
+#- type: entity
+#  parent: BaseThiefStealStructureObjective
+#  id: ToiletGoldenStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: Captain
+#  - type: StealCondition
+#    stealGroup: ToiletGoldenDirtyWater
+#  - type: Objective
+#    difficulty: 2
 
 # Animal
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: IanStealObjective
-  components:
-  - type: NotJobRequirement
-    job: HeadOfPersonnel
-  - type: StealCondition
-    stealGroup: AnimalIan
-  - type: Objective
-    difficulty: 2.5
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: IanStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: HeadOfPersonnel
+#  - type: StealCondition
+#    stealGroup: AnimalIan
+#  - type: Objective
+#    difficulty: 2.5
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: BingusStealObjective
-  components:
-  - type: StealCondition
-    stealGroup: AnimalNamedCat
-  - type: Objective
-    difficulty: 1
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: BingusStealObjective
+#  components:
+#  - type: StealCondition
+#    stealGroup: AnimalNamedCat
+#  - type: Objective
+#    difficulty: 1
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: McGriffStealObjective
-  components:
-  - type: NotJobRequirement
-    job: Detective
-  - type: StealCondition
-    stealGroup: AnimalMcGriff
-  - type: Objective
-    difficulty: 1
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: McGriffStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: Detective
+#  - type: StealCondition
+#    stealGroup: AnimalMcGriff
+#  - type: Objective
+#    difficulty: 1
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: WalterStealObjective
-  components:
-  - type: NotJobRequirement
-    job: Chemist
-  - type: StealCondition
-    stealGroup: AnimalWalter
-  - type: Objective
-    difficulty: 1
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: WalterStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: Chemist
+#  - type: StealCondition
+#    stealGroup: AnimalWalter
+#  - type: Objective
+#    difficulty: 1
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: MortyStealObjective
-  components:
-  - type: StealCondition
-    stealGroup: AnimalMorty
-  - type: Objective
-    difficulty: 0.5
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: MortyStealObjective
+#  components:
+#  - type: StealCondition
+#    stealGroup: AnimalMorty
+#  - type: Objective
+#    difficulty: 0.5
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: RenaultStealObjective
-  components:
-  - type: NotJobRequirement
-    job: Captain
-  - type: StealCondition
-    stealGroup: AnimalRenault
-  - type: Objective
-    difficulty: 2
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: RenaultStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: Captain
+#  - type: StealCondition
+#    stealGroup: AnimalRenault
+#  - type: Objective
+#    difficulty: 2
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: ShivaStealObjective
-  components:
-  - type: NotJobRequirement
-    job: SecurityOfficer
-  - type: StealCondition
-    stealGroup: AnimalShiva
-  - type: Objective
-    difficulty: 2
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: ShivaStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: SecurityOfficer
+#  - type: StealCondition
+#    stealGroup: AnimalShiva
+#  - type: Objective
+#    difficulty: 2
 
-- type: entity
-  parent: BaseThiefStealAnimalObjective
-  id: TropicoStealObjective
-  components:
-  - type: NotJobRequirement
-    job: AtmosphericTechnician
-  - type: StealCondition
-    stealGroup: AnimalTropico
-  - type: Objective
-    difficulty: 1
+#- type: entity
+#  parent: BaseThiefStealAnimalObjective
+#  id: TropicoStealObjective
+#  components:
+#  - type: NotJobRequirement
+#    job: AtmosphericTechnician
+#  - type: StealCondition
+#    stealGroup: AnimalTropico
+#  - type: Objective
+#    difficulty: 1
 
 # Escape
 
