gives Captain glasses a locale name

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -114,7 +114,7 @@
 
 - type: loadoutGroup
   id: CaptainEyes
-  name: Captain Glasses
+  name: loadout-group-glasses
   loadouts:
   - CaptainGlasses
 
