--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -54,9 +54,7 @@
   - type: Clothing
     sprite: _NF/Clothing/Head/Hardsuits/PMC.rsi
   - type: PointLight
-    color: "#ffffff"
-    radius: 5
-    energy: 3
+    color: "#ffff96"
 
 #Pilot Hardsuit
 - type: entity
