--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -29,7 +29,6 @@
         Piercing: 0.9
         Heat: 0.9
 
-
 - type: entity
   parent: ClothingHeadHelmetHardsuitMercenary
   id: ClothingHeadHelmetHardsuitPrivateSecurity
@@ -47,7 +46,7 @@
   parent: ClothingHeadHelmetHardsuitMercenary
   id: ClothingHeadHelmetHardsuitPMC
   name: PMC hardsuit helmet
-  description: Moderately-armored hardsuit helmet for PMC needs.
+  description: Lightly armored hardsuit helmet for PMC needs.
   components:
   - type: Sprite
     sprite: _NF/Clothing/Head/Hardsuits/PMC.rsi
