Emergency Power Take1

--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
@@ -116,6 +116,10 @@
       board: !type:Container
         ents: []
       disk_slot: !type:ContainerSlot {}
+  - type: Battery # Frontier
+    maxCharge: 250000 # Frontier
+    startingCharge: 250000 # Frontier
+  - type: EmergencyCharge # Frontier
 
 - type: entity
   parent: [BaseComputerShuttle, BaseShuttleIntercom] # Frontier - BaseShuttleIntercom
