--- a/Resources/Prototypes/Entities/Objects/Materials/ore.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/ore.yml
@@ -37,7 +37,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawGold: 500 # Frontier: 100<500
+      RawGold: 100
   - type: Extractable
     grindableSolutionName: goldore
   - type: SolutionContainerManager
@@ -99,7 +99,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawIron: 500 # Frontier: 100<500
+      RawIron: 100
   - type: Extractable
     grindableSolutionName: ironore
   - type: SolutionContainerManager
@@ -130,7 +130,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawPlasma: 500 # Frontier: 100<500
+      RawPlasma: 100
   - type: PointLight
     radius: 1.2
     energy: 0.6
@@ -166,7 +166,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawSilver: 500 # Frontier: 100<500
+      RawSilver: 100
   - type: Extractable
     grindableSolutionName: silverore
   - type: SolutionContainerManager
@@ -197,7 +197,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawQuartz: 500 # Frontier: 100<500
+      RawQuartz: 100
   - type: Extractable
     grindableSolutionName: quartzore
   - type: SolutionContainerManager
@@ -228,7 +228,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawUranium: 500 # Frontier: 100<500
+      RawUranium: 100
   - type: PointLight
     radius: 1.2
     energy: 0.8
@@ -267,7 +267,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawBananium: 500 # Frontier: 100<500
+      RawBananium: 100
   - type: PointLight
     radius: 1.2
     energy: 1
@@ -323,7 +323,7 @@
           Quantity: 0.1
   - type: PhysicalComposition
     materialComposition:
-      Coal: 500 # Frontier: 100<500
+      Coal: 100
 
 - type: entity
   parent: Coal
@@ -346,7 +346,7 @@
   - type: Material
   - type: PhysicalComposition
     materialComposition:
-      RawSalt: 500 # Frontier: 100<500
+      RawSalt: 100
   - type: Extractable
     grindableSolutionName: saltore
   - type: SolutionContainerManager
