--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1362,11 +1362,10 @@
       staticRecipes:
         - SheetSteel
         - SheetGlass1
-        - SheetRGlass
+        # - SheetRGlass # Frontier: incentivize players to print base mats
         - SheetPlasma1
-        - SheetPGlass1
-        - SheetRPGlass1
-        - SheetPlasteel1 # Frontier
+        # - SheetPGlass1 # Frontier: incentivize players to print base mats
+        # - SheetRPGlass1 # Frontier: incentivize players to print base mats
         - SheetUranium1
         - IngotGold1
         - IngotSilver1
