--- a/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
@@ -90,12 +90,6 @@
       - MopItem
       - SprayBottle
       - FireExtinguisher
-      - SheetSteel
-      - SheetPlastic
-      - SheetPlasteel
-      - SheetPlasma
-      - SheetRGlass
-      - SheetGlass1
       - CableStack
       - CableMVStack
       - CableHVStack
@@ -384,11 +378,16 @@
       - ClothingOuterHardsuitEVA # Frontier
       - ClothingOuterEVASuitEngineer # Frontier
       - ClothingOuterEVASuitAtmosTech # Frontier
+    ## Materials
+      - Durathread
+      - NFSheetRGlassProcessed
+      - NFSheetPGlass1Processed
+      - NFSheetRPGlass1Processed
+      - NFSheetPlasteel1Processed
+      - NFSheetUGlass1Processed
+      - NFSheetRUGlass1Processed
     ## Misc
       - ClothingHeadHatCone # Frontier
-      - Durathread
-      - Plasteel
-      - SheetRGlass
     dynamicRecipes:
     # Shared lathe recipes
     ## Advanced tools
@@ -418,12 +417,6 @@
       - MiningDrillDiamond # Frontier
       - SprayBottle #Frontier
       - FireExtinguisher #Frontier
-      - SheetSteel #Frontier
-      - SheetPlasteel #Frontier
-      - SheetPlasma #Frontier
-      - SheetGlass1 #Frontier
-      - SheetRGlass #Frontier
-      - SheetPlastic #Frontier
       - ShipyardRCD # Frontier
       - ShipyardRCDAmmo # Frontier
       - SignallerAdvanced # Frontier
