--- a/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
@@ -2,15 +2,8 @@
 - type: latheRecipe
   id: Durathread
   result: MaterialDurathread1
-  completetime: 0.2
+  completetime: 0
+  applyMaterialDiscount: false
   materials:
     Plastic: 100
     Cloth: 100
-
-- type: latheRecipe
-  id: Plasteel
-  result: SheetPlasteel1
-  completetime: 0.2
-  materials:
-    Plasma: 100
-    Steel: 100
