Frontier comments on Nyano lathes, fix rglass cmnt

--- a/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
@@ -90,6 +90,12 @@
       - MopItem
       - SprayBottle
       - FireExtinguisher
+      # - SheetSteel # Frontier: didn't work, use engi techfab
+      # - SheetPlastic # Frontier: didn't work, use engi techfab
+      # - SheetPlasteel # Frontier: didn't work, use engi techfab
+      # - SheetPlasma # Frontier: didn't work, use engi techfab
+      # - SheetRGlass # Frontier: didn't work, use engi techfab
+      # - SheetGlass1 # Frontier: didn't work, use engi techfab
       - CableStack
       - CableMVStack
       - CableHVStack
@@ -380,12 +386,12 @@
       - ClothingOuterEVASuitAtmosTech # Frontier
     ## Materials
       - Durathread
-      - NFSheetRGlassProcessed
-      - NFSheetPGlass1Processed
-      - NFSheetRPGlass1Processed
-      - NFSheetPlasteel1Processed
-      - NFSheetUGlass1Processed
-      - NFSheetRUGlass1Processed
+      - NFSheetRGlassProcessed # Frontier
+      - NFSheetPGlass1Processed # Frontier
+      - NFSheetRPGlass1Processed # Frontier
+      - NFSheetPlasteel1Processed # Frontier
+      - NFSheetUGlass1Processed # Frontier
+      - NFSheetRUGlass1Processed # Frontier
     ## Misc
       - ClothingHeadHatCone # Frontier
     dynamicRecipes:
