--- a/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
@@ -3,6 +3,7 @@
   id: Durathread
   result: MaterialDurathread1
   completetime: 0
+  category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Plastic: 100
