--- a/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
@@ -4,6 +4,7 @@
   id: NFSheetRGlassProcessed
   result: SheetRGlass1
   completetime: 0
+  category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Glass: 100
@@ -13,6 +14,7 @@
   id: NFSheetPGlass1Processed
   result: SheetPGlass1
   completetime: 0
+  category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Glass: 100
@@ -22,6 +24,7 @@
   id: NFSheetRPGlass1Processed
   result: SheetRPGlass1
   completetime: 0
+  category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Glass: 100
@@ -32,6 +35,7 @@
   id: NFSheetPlasteel1Processed
   result: SheetPlasteel1
   completetime: 0
+  category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Plasma: 100
@@ -41,6 +45,7 @@
   id: NFSheetUGlass1Processed
   result: SheetUGlass1
   completetime: 0
+  category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Uranium: 100
@@ -50,6 +55,7 @@
   id: NFSheetRUGlass1Processed
   result: SheetRUGlass1
   completetime: 0
+  category: NFMaterials
   applyMaterialDiscount: false
   materials:
     Uranium: 100
