Mining, materials rework (#2035)
* Mining, materials  rework

* Roids drop stacks of 5 ore, most ore stacks to 100

* Material rework, engineering mat printing

* Remove plasteel from autolathe

* Remove development.toml cruft

* Frontier comments on Nyano lathes, fix rglass cmnt

* materials category

* materials category

---------

Co-authored-by: Dvir <39403717+dvir001@users.noreply.github.com>

--- a/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
@@ -90,12 +90,12 @@
       - MopItem
       - SprayBottle
       - FireExtinguisher
-      - SheetSteel
-      - SheetPlastic
-      - SheetPlasteel
-      - SheetPlasma
-      - SheetRGlass
-      - SheetGlass1
+      # - SheetSteel # Frontier: didn't work, use engi techfab
+      # - SheetPlastic # Frontier: didn't work, use engi techfab
+      # - SheetPlasteel # Frontier: didn't work, use engi techfab
+      # - SheetPlasma # Frontier: didn't work, use engi techfab
+      # - SheetRGlass # Frontier: didn't work, use engi techfab
+      # - SheetGlass1 # Frontier: didn't work, use engi techfab
       - CableStack
       - CableMVStack
       - CableHVStack
@@ -384,11 +384,16 @@
       - ClothingOuterHardsuitEVA # Frontier
       - ClothingOuterEVASuitEngineer # Frontier
       - ClothingOuterEVASuitAtmosTech # Frontier
+    ## Materials
+      - Durathread
+      - NFSheetRGlassProcessed # Frontier
+      - NFSheetPGlass1Processed # Frontier
+      - NFSheetRPGlass1Processed # Frontier
+      - NFSheetPlasteel1Processed # Frontier
+      - NFSheetUGlass1Processed # Frontier
+      - NFSheetRUGlass1Processed # Frontier
     ## Misc
       - ClothingHeadHatCone # Frontier
-      - Durathread
-      - Plasteel
-      - SheetRGlass
     dynamicRecipes:
     # Shared lathe recipes
     ## Advanced tools
@@ -418,12 +423,6 @@
       - MiningDrillDiamond # Frontier
       - SprayBottle #Frontier
       - FireExtinguisher #Frontier
-      - SheetSteel #Frontier
-      - SheetPlasteel #Frontier
-      - SheetPlasma #Frontier
-      - SheetGlass1 #Frontier
-      - SheetRGlass #Frontier
-      - SheetPlastic #Frontier
       - ShipyardRCD # Frontier
       - ShipyardRCDAmmo # Frontier
       - SignallerAdvanced # Frontier
