Adds a doafter to chemical medipens (#2121)
* Adds a doafter to chemical medipens

* Merge changes from upstream #30704

* Update hypospray.yml

* Update hypospray.yml

---------

Co-authored-by: Dvir <39403717+dvir001@users.noreply.github.com>
Co-authored-by: Dvir <dvirf01@gmail.com>

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -116,6 +116,8 @@
     transferAmount: 15
     onlyAffectsMobs: false
     injectOnly: true
+    preventCombatInjection: true # Frontier
+    doAfterTime: 2 # Frontier
   - type: Appearance
   - type: SolutionContainerVisuals
     maxFillLevels: 1
