--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/silicon.yml
@@ -44,7 +44,9 @@
   - type: VehicleHorn
 
 - type: entity
-  parent: MobCleanBot
+  parent:
+  - MobCleanBot
+  - BaseC3SyndicateContrabandNoValue
   id: MobCleanBotSyndie
   name: syndicate cleanbot
   description: The creep of automation now threatening space janitors with a knife.
