--- a/Resources/Changelog/Frontier.yml
+++ b/Resources/Changelog/Frontier.yml
@@ -4199,3 +4199,15 @@ Entries:
       message: Issues with Stasis floor tiles and SMES wiring.
   id: 5354
   time: '2024-10-02T09:27:03.0000000+00:00'
+- author: whatston3
+  changes:
+    - type: Tweak
+      message: >-
+        Asteroids now spawn larger ore stacks for common minerals, and their max
+        stack size has been increased.
+    - type: Tweak
+      message: >-
+        Composite materials like plasma glass have been reduced in value and are
+        not printable from the base ore processor.
+  id: 5355
+  time: '2024-10-02T12:27:03.0000000+00:00'
