--- a/Resources/Changelog/Frontier.yml
+++ b/Resources/Changelog/Frontier.yml
@@ -4205,3 +4205,16 @@ Entries:
       message: Chemical medipens now have a small delay when injecting others.
   id: 5355
   time: '2024-10-02T18:16:07.0000000+00:00'
+- author: whatston3
+  changes:
+    - type: Tweak
+      message: >-
+        Asteroids now spawn larger ore stacks for common minerals, and their max
+        stack size has been increased.
+    - type: Tweak
+      message: >-
+        Composite materials like plasma glass have been reduced in value and are
+        not printable from the base ore processor.
+  id: 5356
+  time: '2024-10-02T18:17:03.0000000+00:00'
+
