--- a/Resources/Prototypes/_NF/Maps/debug.yml
+++ b/Resources/Prototypes/_NF/Maps/debug.yml
@@ -33,3 +33,5 @@
             Pirate: [ -1, -1]
             Prisoner: [ -1, -1]
             Borg: [ -1, -1] # For testing.
+        - type: StationDeadDrop
+          maxDeadDrops: 20 # Testing
