Port EE#783 (Thank you, Mnemotechnician)

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -1907,6 +1907,8 @@
     FoodTacoShell: 1
     FoodMeatCutlet: 1
     FoodCheeseSlice: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoChicken
@@ -1917,6 +1919,8 @@
     FoodTacoShell: 1
     FoodMeatChickenCutlet: 1
     FoodCheeseSlice: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoFish
@@ -1929,6 +1933,8 @@
     FoodOnionSlice: 2
     FoodTomato: 1
     FoodCabbage: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoRat
@@ -1939,6 +1945,8 @@
     FoodTacoShell: 1
     FoodCheeseSlice: 1
     FoodMeatRat: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoBeefSupreme
@@ -1952,6 +1960,8 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoChickenSupreme
@@ -1965,6 +1975,8 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeCroissant
