--- a/Resources/Prototypes/Guidebook/references.yml
+++ b/Resources/Prototypes/Guidebook/references.yml
@@ -17,7 +17,7 @@
 - type: guideEntry
   id: FoodRecipes
   name: guide-entry-foodrecipes
-  text: "/ServerInfo/Guidebook/Service/FoodRecipes.xml"
+  text: "/ServerInfo/_EE/Guidebook/Service/FoodRecipes.xml" # EE: add _EE
 
 - type: guideEntry
   id: Writing
