Add BecomesStation component

--- a/Resources/Maps/_NF/Shuttles/Expedition/charon.yml
+++ b/Resources/Maps/_NF/Shuttles/Expedition/charon.yml
@@ -18,6 +18,8 @@ entities:
     components:
     - type: MetaData
       name: Charon
+    - type: BecomesStation
+      id: Charon
     - type: Transform
       pos: -2.1354167,-0.5052121
       parent: invalid
