Unneeded dependencies, show search bar

--- a/Resources/Prototypes/Guidebook/references.yml
+++ b/Resources/Prototypes/Guidebook/references.yml
@@ -18,6 +18,7 @@
   id: FoodRecipes
   name: guide-entry-foodrecipes
   text: "/ServerInfo/_EE/Guidebook/Service/FoodRecipes.xml" # EE: add _EE
+  filterEnabled: True # EE
 
 - type: guideEntry
   id: Writing
