Add BusStop field to POI prototype

--- a/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
@@ -16,6 +16,7 @@
   iffColor: "#3737C8" #blue the color of NT
   alwaysSpawn: true
   gridPath: /Maps/_NF/POI/lodge.yml
+  busStop: true
 
 - type: gameMap
   id: Lodge
