--- a/Resources/Prototypes/_NF/PointsOfInterest/tinniasrest.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/tinniasrest.yml
@@ -16,6 +16,7 @@
   iffColor: "#ffa600" #yellorange for faction style
   spawnGroup: RestStop
   gridPath: /Maps/_NF/POI/tinnia.yml
+  busStop: true
 
 - type: gameMap
   id: Tinnia
