--- a/Resources/Prototypes/_NF/PointsOfInterest/trade.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/trade.yml
@@ -16,6 +16,7 @@
   iffColor: "#37C837" 
   spawnGroup: MarketStation
   gridPath: /Maps/_NF/POI/trade.yml
+  busStop: true
   gridProtection:
     - ArtifactTriggers
   
