--- a/Resources/Prototypes/_NF/PointsOfInterest/bahamamamas.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/bahamamamas.yml
@@ -16,6 +16,7 @@
   iffColor: "#ffa600" #yellorange for faction style
   spawnChance: 1
   spawnGroup: RestStop
+  busStop: true
   gridPath: /Maps/_NF/POI/bahama.yml
 
 - type: gameMap
