Multiple devices per recipe

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -447,6 +447,8 @@
   time: 10
   solids:
     FoodDoughCotton: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeSausageBread
@@ -516,6 +518,8 @@
   solids:
     FoodDough: 1
     PartRodMetal1: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeButteredToast
@@ -1055,6 +1059,8 @@
     Water: 10
   solids:
     FoodMeatSnail: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeEscargotSoup
@@ -1068,6 +1074,8 @@
     FoodOnionSlice: 1
     FoodButter: 1
     FoodMeatSnailCooked: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 #Pies
 
@@ -2108,6 +2116,8 @@
     FoodTacoShell: 1
     FoodMeatCutlet: 1
     FoodCheeseSlice: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoChicken
@@ -2118,6 +2128,8 @@
     FoodTacoShell: 1
     FoodMeatChickenCutlet: 1
     FoodCheeseSlice: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoFish
@@ -2130,6 +2142,8 @@
     FoodOnionSlice: 2
     FoodTomato: 1
     FoodCabbage: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoRat
@@ -2140,6 +2154,8 @@
     FoodTacoShell: 1
     FoodCheeseSlice: 1
     FoodMeatRat: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoBeefSupreme
@@ -2153,6 +2169,8 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoChickenSupreme
@@ -2166,6 +2184,8 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeCroissant
