--- a/Resources/Prototypes/_NF/Research/experimental.yml
+++ b/Resources/Prototypes/_NF/Research/experimental.yml
@@ -1,3 +1,18 @@
+# Tier 2
+
+- type: technology
+  id: RapidPartExchange
+  name: research-technology-rped
+  icon:
+    sprite: _NF/Objects/Specific/Research/rped.rsi
+    state: icon
+  discipline: Experimental
+  tier: 2
+  cost: 7500
+  recipeUnlocks:
+  - RPED
+  - NFBlueprintRped
+
 # Tier 3
 
 - type: technology
