--- a/Resources/Prototypes/Guidebook/security.yml
+++ b/Resources/Prototypes/Guidebook/security.yml
@@ -14,10 +14,10 @@
   name: guide-entry-forensics
   text: "/ServerInfo/Guidebook/Security/Forensics.xml"
 
-- type: guideEntry
-  id: Defusal
-  name: guide-entry-defusal
-  text: "/ServerInfo/Guidebook/Security/Defusal.xml"
+# - type: guideEntry
+#   id: Defusal
+#   name: guide-entry-defusal
+#   text: "/ServerInfo/Guidebook/Security/Defusal.xml"
 
 - type: guideEntry
   id: CriminalRecords
