--- a/Resources/Prototypes/Corvax/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
+++ b/Resources/Prototypes/Corvax/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
@@ -1,6 +1,7 @@
 - type: entity
   id: PelletKS23Flashbang
   name: flashbang (.90)
+  noSpawn: true
   parent: [ BaseBullet, BaseBulletTrigger ]
   components:
   - type: Sprite
@@ -21,6 +22,7 @@
 - type: entity
   id: PelletKS23Smoke
   name: smoke (.90)
+  noSpawn: true
   parent: [ BaseBullet, BaseBulletTrigger ]
   components:
   - type: Sprite
@@ -47,6 +49,7 @@
 - type: entity
   id: PelletKS23Base
   name: (.90)
+  noSpawn: true
   parent: BaseBullet
   components:
   - type: Sprite
@@ -55,7 +58,7 @@
   - type: Projectile
     damage:
       types:
-        Piercing: 10
+        Piercing: 15
 
 - type: entity
   id: PelletKS23BaseSpread
@@ -69,6 +72,7 @@
 - type: entity
   id: PelletKS23Beanbag
   name: beanbag (.90)
+  noSpawn: true
   parent: BaseBullet
   components:
   - type: Sprite
