--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,20 +6,19 @@ concurrency:
 on:
   workflow_dispatch:
   schedule:
-  - cron: '0 1 * * *'
+    - cron: '0 10 * * *'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-#    - name: Install dependencies
-#      run: sudo apt-get install -y python3-paramiko python3-lxml
+    - name: Install dependencies
+      run: sudo apt-get install -y python3-paramiko python3-lxml
 
     - uses: actions/checkout@v3.6.0
       with:
         submodules: 'recursive'
-
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v3.2.0
       with:
@@ -45,17 +44,18 @@ jobs:
     - name: Publish version
       run: Tools/publish_multi_request.py
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
         GITHUB_REPOSITORY: ${{ vars.GITHUB_REPOSITORY }}
         FORK_ID: ${{ vars.FORK_ID }}
 
-    #    - name: Publish changelog (Discord)
-    #      run: Tools/actions_changelogs_since_last_run.py
-    #      env:
-    #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #        DISCORD_WEBHOOK_URL: ${{ secrets.CHANGELOG_DISCORD_WEBHOOK }}
+    #- name: Publish changelog (Discord)
+    #  run: Tools/actions_changelogs_since_last_run.py
+    # env:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #    DISCORD_WEBHOOK_URL: ${{ secrets.CHANGELOG_DISCORD_WEBHOOK }}
 
-    #    - name: Publish changelog (RSS)
-    #      run: Tools/actions_changelog_rss.py
-    #      env:
-    #        CHANGELOG_RSS_KEY: ${{ secrets.CHANGELOG_RSS_KEY }}
+    #- name: Publish changelog (RSS)
+    #  run: Tools/actions_changelog_rss.py
+    #  env:
+    #    CHANGELOG_RSS_KEY: ${{ secrets.CHANGELOG_RSS_KEY }}
