--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/pinpointer.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/pinpointer.yml
@@ -7,3 +7,12 @@
     maxRange: -1
     retargetDoAfter: 0
     canTargetMobs: true
+
+- type: entity
+  description: Pointing to some unknown place.
+  id: PinpointerSyndicatePOI
+  parent: PinpointerSyndicateNuclear
+  components:
+  - type: Pinpointer
+    component: SyndicateFOB
+    targetName: unknown
