POI Code spawn cleanup

--- a/Resources/Prototypes/_NF/PointsOfInterest/courthouse.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/courthouse.yml
@@ -13,7 +13,7 @@
   name: "Courthouse"
   rangeMin: 1150
   rangeMax: 2050
-  iffColor: "#8e6444" #brown
+  IFFColor: "#8e6444" #brown
   alwaysSpawn: true
   gridPath: /Maps/_NF/POI/courthouse.yml
 
