--- a/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
@@ -13,7 +13,7 @@
   name: 'Expeditionary Lodge'
   rangeMin: 1650
   rangeMax: 3400
-  iffColor: "#3737C8" #blue the color of NT
+  IFFColor: "#3737C8" #blue the color of NT
   alwaysSpawn: true
   gridPath: /Maps/_NF/POI/lodge.yml
   busStop: true
