--- a/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
@@ -13,8 +13,7 @@
   name: 'NFSD Outpost'
   rangeMin: 750
   rangeMax: 1000
-  iffColor: "#8e6444" #brown to match the color of uniform and the color of the pants of the nearest pirates
-  alwaysSpawn: true
+  IFFColor: "#8e6444" #brown to match the color of uniform and the color of the pants of the nearest pirates
   gridPath: /Maps/_NF/POI/nfsd.yml
   gridProtection:
   - EmpEvents
