--- a/Resources/Prototypes/_NF/PointsOfInterest/anomalouslab.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/anomalouslab.yml
@@ -13,7 +13,7 @@
   name: 'Anomalous Lab'
   rangeMin: 2100
   rangeMax: 3800
-  iffColor: "#ffa600" #yellorange for nuetral civillian
+  IFFColor: "#ffa600" #yellorange for nuetral civillian
   spawnChance: 1
   spawnGroup: ScienceLab
   gridPath: /Maps/_NF/POI/anomalouslab.yml
