--- a/Resources/Prototypes/_NF/PointsOfInterest/bahamamamas.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/bahamamamas.yml
@@ -13,7 +13,7 @@
   name: "Bahama Mama's"
   rangeMin: 1200
   rangeMax: 2900
-  iffColor: "#ffa600" #yellorange for faction style
+  IFFColor: "#ffa600" #yellorange for faction style
   spawnChance: 1
   spawnGroup: RestStop
   gridPath: /Maps/_NF/POI/bahama.yml
