--- a/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
@@ -13,9 +13,8 @@
   name: Pirate Cove
   rangeMin: 10000
   rangeMax: 15000
-  iffColor: "#C83737" #red the color of ebil
-  isHidden: true
-  alwaysSpawn: true
+  IFFColor: "#C83737" #red the color of ebil
+  IFFFlags: [HideLabel]
   allowIFFChanges: true
   gridPath: /Maps/_NF/POI/cove.yml
 
