--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -32,6 +32,7 @@
   suffix: POI, LP Bravo
   categories: [ HideSpawnMenu ]
   components:
+  - type: SyndicateFOB # For pinpointer
   - type: WarpPoint
     location: "Listening Point: Bravo"
     adminOnly: true
