clear up publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,15 +42,6 @@ jobs:
     - name: Package client
       run: dotnet run --project Content.Packaging client --no-wipe-release
 
-    - name: Upload build artifact
-      id: artifact-upload-step
-      uses: actions/upload-artifact@v4
-      with:
-        name: build
-        path: release/*.zip
-        compression-level: 0
-        retention-days: 0
-
     - name: Publish version
       run: Tools/publish_multi_request.py
       env:
@@ -69,7 +60,7 @@ jobs:
     #      env:
     #        CHANGELOG_RSS_KEY: ${{ secrets.CHANGELOG_RSS_KEY }}
 
-    - uses: geekyeggo/delete-artifact@v5
-      if: always()
-      with:
-        name: build
+    #- uses: geekyeggo/delete-artifact@v5
+    #  if: always()
+    #  with:
+    #    name: build
