Assembler UI rework, fix recipes, mediwave layer

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -516,6 +516,7 @@
   solids:
     FoodDough: 1
     PartRodMetal1: 1
+  recipeType: Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeButteredToast
@@ -692,6 +693,7 @@
   solids:
     FoodDoughCottonFlat: 1
     CottonBol: 4
+  recipeType: Oven # Frontier
 
 #Italian
 - type: microwaveMealRecipe
@@ -1055,6 +1057,9 @@
     Water: 10
   solids:
     FoodMeatSnail: 1
+  recipeType: # Frontier
+  - Oven # Frontier
+  - Microwave # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeEscargotSoup
@@ -1068,6 +1073,7 @@
     FoodOnionSlice: 1
     FoodButter: 1
     FoodMeatSnailCooked: 1
+  recipeType: Oven # Frontier
 
 #Pies
 
@@ -2108,6 +2114,8 @@
     FoodTacoShell: 1
     FoodMeatCutlet: 1
     FoodCheeseSlice: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoChicken
@@ -2118,6 +2126,8 @@
     FoodTacoShell: 1
     FoodMeatChickenCutlet: 1
     FoodCheeseSlice: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoFish
@@ -2130,6 +2140,8 @@
     FoodOnionSlice: 2
     FoodTomato: 1
     FoodCabbage: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoRat
@@ -2140,6 +2152,8 @@
     FoodTacoShell: 1
     FoodCheeseSlice: 1
     FoodMeatRat: 1
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoBeefSupreme
@@ -2153,6 +2167,8 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeTacoChickenSupreme
@@ -2166,6 +2182,8 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+  recipeType: # Frontier
+  - Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeCroissant
