--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/syndicate.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/syndicate.yml
@@ -60,6 +60,27 @@
           state: pinpointer-syndicate
     - type: RandomSpawner
       prototypes:
+        - ToolboxSyndicateFilled
+        - ToolboxSyndicate
+        - ClothingEyesGlassesHiddenSecurity
+        - ClothingBackpackDuffelSyndicateEVABundle
+        - ClothingBackpackSyndicate
+        - ClothingMaskGasSyndicate
+        - SyndieHandyFlag
+        - SyndicatePersonalAI
+        - RubberStampSyndicate
+        - ClothingBeltSyndieHolster
+        - ClothingEyesHudSyndicate
+        - ClothingBackpackDuffelSyndicatePyjamaBundle
+        - ClothingBackpackDuffelSyndicateMedicalBundleFilled
+        - EncryptionKeySyndie
+        - ClothingShoesBootsMagSyndie
+        - ClothingHeadsetAltSyndicate
+        - ToyFigurineNukieElite
+        - ToyNuke
+        - PlushieNuke
+      chance: 0.9
+      rarePrototypes:
         - PinpointerSyndicatePOI
-      chance: 0.1
+      rareChance: 0.1
       offset: 0
