DeadDrop admin only spawn

--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -182,3 +182,14 @@
   components:
   - type: WarpPoint
     location: Cave
+
+# DeadDrop
+- type: entity
+  id: WarpPointNFSyndicateSupplyDrop
+  parent: WarpPoint
+  suffix: DeadDrop
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Syndicate Supply Drop
+    adminOnly: true
