--- a/Resources/Maps/_NF/DeadDrop/deaddrop.yml
+++ b/Resources/Maps/_NF/DeadDrop/deaddrop.yml
@@ -189,7 +189,7 @@ entities:
         chunkSize: 4
     - type: GasTileOverlay
     - type: RadiationGridResistance
-- proto: AirlockShuttle
+- proto: AirlockExternalShuttleSyndicateLocked
   entities:
   - uid: 23
     components:
