--- a/Resources/Maps/_NF/POI/lpbravo.yml
+++ b/Resources/Maps/_NF/POI/lpbravo.yml
@@ -391,7 +391,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -8.5,-0.5
       parent: 1
-- proto: AirlockExternalSyndicateLocked
+- proto: AirlockHatchSyndicate
   entities:
   - uid: 15
     components:
