--- a/Resources/Maps/_NF/Shuttles/mccargo.yml
+++ b/Resources/Maps/_NF/Shuttles/mccargo.yml
@@ -4998,6 +4998,13 @@ entities:
     - type: Transform
       pos: -2.5,2.5
       parent: 1
+- proto: KitchenAssembler
+  entities:
+  - uid: 531
+    components:
+    - type: Transform
+      pos: 1.5,7.5
+      parent: 1
 - proto: KitchenDeepFryer
   entities:
   - uid: 334
@@ -5006,9 +5013,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 4.5,5.5
       parent: 1
-- proto: KitchenElectricGrill
+- proto: KitchenElectricRange
   entities:
-  - uid: 774
+  - uid: 675
     components:
     - type: Transform
       pos: 0.5,7.5
@@ -5026,11 +5033,6 @@ entities:
     components:
     - type: Transform
       pos: 2.5,7.5
-      parent: 1
-  - uid: 531
-    components:
-    - type: Transform
-      pos: 1.5,7.5
       parent: 1
 - proto: KitchenReagentGrinder
   entities:
@@ -5845,6 +5847,20 @@ entities:
     - type: Transform
       pos: 4.5,8.5
       parent: 1
+    - type: ContainerContainer
+      containers:
+        machine_board: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        machine_parts: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        blueprint: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
 - proto: ShelfKitchen
   entities:
   - uid: 154
@@ -6846,12 +6862,6 @@ entities:
     components:
     - type: Transform
       pos: -6.5,6.5
-      parent: 1
-  - uid: 675
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 0.5,7.5
       parent: 1
   - uid: 683
     components:
