Fix base contra for syndicate crate

--- a/Resources/Prototypes/Entities/Objects/Devices/pinpointer.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pinpointer.yml
@@ -42,7 +42,7 @@
 - type: entity
   name: pinpointer
   id: PinpointerNuclear
-  parent: [ PinpointerBase, BaseC2ContrabandUnredeemable ] # Frontier: BaseCommandContraband<BaseC2ContrabandUnredeemable
+  parent: [ BaseC2ContrabandUnredeemable, PinpointerBase ] # Frontier: BaseCommandContraband<BaseC2ContrabandUnredeemable
   components:
   - type: Pinpointer
     component: NukeDisk
