--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/syndicate.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/syndicate.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: CrateSyndicateLightSurplusBundle
-  parent: [ CrateSyndicate, StorePresetLightUplink, BaseC3SyndicateContraband ]
+  parent: [ CrateSyndicate, StorePresetLightUplink ]
   name: Syndicate light surplus crate
   description: Contains 20 telecrystals worth of completely random Syndicate items. It can be useless junk or really good.
   components:
