--- a/Resources/Prototypes/Entities/Structures/Power/Generation/generators.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/Generation/generators.yml
@@ -200,7 +200,7 @@
     price: 14
   - type: ContainerFill
     containers:
-      board: [ Null ] # Frontier WallmountGeneratorElectronics<Null
+      board: Null # Frontier WallmountGeneratorElectronics<Null
   - type: ContainerContainer
     containers:
       board: !type:Container
@@ -221,7 +221,7 @@
     price: 38
   - type: ContainerFill
     containers:
-      board: [ Null ] # Frontier WallmountGeneratorAPUElectronics<Null
+      board: Null # Frontier WallmountGeneratorAPUElectronics<Null
   - type: ContainerContainer
     containers:
       board: !type:Container
