--- a/Resources/Prototypes/Entities/Structures/Power/Generation/generators.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/Generation/generators.yml
@@ -198,9 +198,9 @@
     node: generator
   - type: StaticPrice
     price: 14
-  - type: ContainerFill
-    containers:
-      board: Null # Frontier WallmountGeneratorElectronics<Null
+#  - type: ContainerFill # Frontier
+#    containers: # Frontier
+#      board: WallmountGeneratorElectronics # Frontier
   - type: ContainerContainer
     containers:
       board: !type:Container
@@ -219,9 +219,9 @@
     node: APU
   - type: StaticPrice
     price: 38
-  - type: ContainerFill
-    containers:
-      board: Null # Frontier WallmountGeneratorAPUElectronics<Null
+#  - type: ContainerFill # Frontier
+#    containers: # Frontier
+#      board: WallmountGeneratorAPUElectronics # Frontier
   - type: ContainerContainer
     containers:
       board: !type:Container
