Add required spawn group to required POIs

--- a/Resources/Prototypes/_NF/PointsOfInterest/edison.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/edison.yml
@@ -14,6 +14,7 @@
   # rangeMin: 3650
   # rangeMax: 6400
   # IFFColor: "#3737C8" #blue the color of NT
+  # spawnGroup: Required
   # gridPath: /Maps/_NF/POI/edison.yml 
 
 # - type: gameMap
