--- a/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
@@ -14,6 +14,7 @@
   rangeMin: 750
   rangeMax: 1000
   IFFColor: "#8e6444" #brown to match the color of uniform and the color of the pants of the nearest pirates
+  spawnGroup: Required
   gridPath: /Maps/_NF/POI/nfsd.yml
   gridProtection:
   - EmpEvents
