--- a/Resources/Prototypes/_NF/PointsOfInterest/courthouse.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/courthouse.yml
@@ -14,6 +14,7 @@
   rangeMin: 1150
   rangeMax: 2050
   IFFColor: "#8e6444" #brown
+  spawnGroup: Required
   gridPath: /Maps/_NF/POI/courthouse.yml
 
 - type: gameMap
