--- a/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
@@ -16,6 +16,7 @@
   IFFColor: "#C83737" #red the color of ebil
   IFFFlags: [HideLabel]
   allowIFFChanges: true
+  spawnGroup: Required
   gridPath: /Maps/_NF/POI/cove.yml
 
 - type: gameMap
