--- a/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
@@ -14,6 +14,7 @@
   rangeMin: 1650
   rangeMax: 3400
   IFFColor: "#3737C8" #blue the color of NT
+  spawnGroup: Required
   gridPath: /Maps/_NF/POI/lodge.yml
   busStop: true
 
