--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/syndicate.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/syndicate.yml
@@ -46,3 +46,41 @@
         - CrateSyndicateSurplusBundle
         - CrateSyndicateSuperSurplusBundle
       rareChance: 0.1
+
+- type: entity
+  name: Syndicate POI Pinpointer
+  id: PinpointerSyndicatePOISpawner
+  parent: MarkerBase
+  suffix: 10
+  components:
+    - type: Sprite
+      layers:
+        - state: red
+        - sprite: Objects/Devices/pinpointer.rsi
+          state: pinpointer-syndicate
+    - type: RandomSpawner
+      prototypes:
+        - ToolboxSyndicateFilled
+        - ToolboxSyndicate
+        - ClothingEyesGlassesHiddenSecurity
+        - ClothingBackpackDuffelSyndicateEVABundle
+        - ClothingBackpackSyndicate
+        - ClothingMaskGasSyndicate
+        - SyndieHandyFlag
+        - SyndicatePersonalAI
+        - RubberStampSyndicate
+        - ClothingBeltSyndieHolster
+        - ClothingEyesHudSyndicate
+        - ClothingBackpackDuffelSyndicatePyjamaBundle
+        - ClothingBackpackDuffelSyndicateMedicalBundleFilled
+        - EncryptionKeySyndie
+        - ClothingShoesBootsMagSyndie
+        - ClothingHeadsetAltSyndicate
+        - ToyFigurineNukieElite
+        - ToyNuke
+        - PlushieNuke
+      chance: 0.9
+      rarePrototypes:
+        - PinpointerSyndicatePOI
+      rareChance: 0.1
+      offset: 0
